[REFACTOR] RecruitController - getRecruits에서 stream.toList()를 사용하도록 변경